# app_project_scaffold

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: structure_exampl_Python.txt  structure_example_Springboot.txt
src/: main.py  utils.py
tests/: test_main.py
