[project]
name = "app_project_scaffold"
version = "0.1.0"
description = "A Python tool to scaffold projects from a folder structure specification."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Nour Alhaddad", email = "nour.alhaddad@hotmail.com" }
]
license = { file = "LICENSE" }
keywords = ["scaffold", "project", "automation", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools"
]

# Optional development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0"
]

# CLI entry points
[project.scripts]
scaffold = "create_project:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"